fix: 타입 안정성을 위한 제네릭 활용 추가